tests/error/comptime/check_slice_construction11.bz
function test()
{
	(consteval {
		consteval i = 0;
		consteval j = 0;
		__builtin_slice_from_const_ptrs(&i, &j);
	});
}
